--- a/about-us.html
+++ b/about-us.html
@@ -81,23 +81,25 @@
       </div>
       <!-- hero end  -->
       <!-- goal start--> 
-       <!-- || a small issue there in right section, it should me-auto   -->
+      <!-- || a small issue there in right section, it should me-auto   -->
       <div id="goal">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-5 mx-auto left">
+          <div class="row justify-content-lg-evenly">
+            <div class="col-lg-5  left">
               <p>Who we are</p>
               <h2>Goal focussed</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <div class="col-lg-5 d-flex justify-content-end flex-column right">
+            <div class="col-lg-5 d-flex justify-content-end align-items-start flex-column right">
               <h2>Continuous improvement</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
-            <div class="col-12 img">
-              <img src="images/man-in-blue-jacket-looking-at-white-board-7413916.png" alt="#image">
+              <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="img d-flex justify-content-center">
+          <img src="images/man-in-blue-jacket-looking-at-white-board-7413916.png" alt="#image">
         </div>
       </div>
       <!-- goal end  -->
@@ -137,7 +139,7 @@
             <div class="col-lg-6 d-flex flex-column justify-content-center left">
               <p>Our Mission </p>
               <h2>Inspire, Innovate, Share</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
             <div class="col-lg-5 right ms-auto">
               <img src="images/a-man-standing-in-an-office-7792811.png" alt="">
@@ -147,7 +149,7 @@
             <div class="col-lg-6 d-flex flex-column justify-content-center left">
               <p>Our Vision </p>
               <h2>Laser focus</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
             <div class="col-lg-5 right me-auto">
               <img src="images/group-of-people-sitting-indoors-3184360.png" alt="#group">
@@ -159,21 +161,21 @@
       <!-- benifits start  -->
       <div id="benifits">
         <div class="container">
-          <h2>The benefits of working with us</h2>
+          <h2 class="text-center">The benefits of working with us</h2>
           <div class="row justify-content-between">
-            <div class="col-lg-4">
+            <div class="col-lg-4 item">
               <img src="images/Icon (13).png" alt="#icon">
               <h3>Customize with ease</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
             </div>
-            <div class="col-lg-4">
-              <img src="images/Icon (13).png" alt="#icon">
-              <h3>Customize with ease</h3>
+            <div class="col-lg-4 item">
+              <img src="images/Icon (10).png" alt="#icon">
+              <h3>Perfectly Responsive</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
             </div>
-            <div class="col-lg-4">
-              <img src="images/Icon (13).png" alt="#icon">
-              <h3>Customize with ease</h3>
+            <div class="col-lg-4 item">
+              <img src="images/Icon (8).png" alt="#icon">
+              <h3>Friendly Support</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
             </div>
           </div>
@@ -182,17 +184,19 @@
       <!-- benifits end  -->
       <!-- companies start  -->
       <div id="companies">
-        <div class="container d-flex justify-content-between">
-        <div class="users">
-          <h2>100.000+</h2>
-          <p>Finsweet Users</p>
-        </div>
-        <div class="logo d-flex justify-content-between align-items-center">
-          <img src="images/Logo 1.png" alt="#logo">
-          <img src="images/Logo 2.png" alt="#logo">
-          <img src="images/Logo 3.png" alt="#logo">
-          <img src="images/Logo 4.png" alt="#logo">
-          <img src="images/Logo 5.png" alt="#logo">
+        <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-lg-2 d-flex flex-column justify-content-center">
+              <h2>100.000+</h2>
+              <p>Finsweet Users</p>
+          </div>
+          <div class="col-lg-10 d-flex align-items-center justify-content-around">
+              <img src="images/Logo 1.png" alt="#logo">
+              <img src="images/Logo 2.png" alt="#logo">
+              <img src="images/Logo 3.png" alt="#logo">
+              <img src="images/Logo 4.png" alt="#logo">
+              <img src="images/Logo 5.png" alt="#logo">
+          </div>
         </div>
       </div>
       </div>
@@ -201,24 +205,52 @@
       <div id="team">
         <div class="container">
           <h2 class="text-center">Meet our team</h2>
-          <div class="row justify-content-between">
+          <div class="row justify-content-around">
             <div class="col-lg-2 text-center">
-              <img src="images/man-in-black-suit-holding-a-calling-card-3785104.png" alt="#member">
+              <div class="img">
+                <img src="images/man-in-black-suit-holding-a-calling-card-3785104.png" alt="#member">
+                <div class="pop">
+                  <i class="bi bi-facebook"></i>
+                  <i class="bi bi-twitter"></i>
+                  <i class="bi bi-linkedin"></i>
+                </div>
+              </div>
               <h3>John Smith</h3>
               <p>CEO</p>
             </div>
             <div class="col-lg-2 text-center">
-              <img src="images/serious-man-3760373.png" alt="#member">
+              <div class="img">
+                <img src="images/serious-man-3760373.png" alt="#member">
+                <div class="pop">
+                  <i class="bi bi-facebook"></i>
+                  <i class="bi bi-twitter"></i>
+                  <i class="bi bi-linkedin"></i>
+                </div>
+              </div>
               <h3>Simon Adams</h3>
               <p>CTO</p>
             </div>
             <div class="col-lg-2  text-center">
-              <img src="images/man-in-white-shirt-wearing-blue-bucket-hat-6626874.png" alt="#member">
+              <div class="img">
+                <img src="images/man-in-white-shirt-wearing-blue-bucket-hat-6626874.png" alt="#member">
+                <div class="pop">
+                  <i class="bi bi-facebook"></i>
+                  <i class="bi bi-twitter"></i>
+                  <i class="bi bi-linkedin"></i>
+                </div>
+              </div>
               <h3>Paul Jones</h3>
               <p>Design Lead</p>
             </div>
             <div class="col-lg-2 text-center">
-              <img src="images/transgender-model-touching-forehead-in-neon-light-7613875.png" alt="#member">
+              <div class="img">
+                <img src="images/transgender-model-touching-forehead-in-neon-light-7613875.png" alt="#member">
+                <div class="pop">
+                  <i class="bi bi-facebook"></i>
+                  <i class="bi bi-twitter"></i>
+                  <i class="bi bi-linkedin"></i>
+                </div>
+              </div>
               <h3>Sara Hardin</h3>
               <p>Project Manager</p>
             </div>
