--- a/feature.html
+++ b/feature.html
@@ -82,17 +82,19 @@
       <!-- hero end -->
       <!-- companies start -->
       <div id="companies">
-        <div class="container d-flex justify-content-between">
-        <div class="users">
-          <h2>100.000+</h2>
-          <p>Finsweet Users</p>
-        </div>
-        <div class="logo d-flex justify-content-between align-items-center">
-          <img src="images/Logo 1.png" alt="#logo">
-          <img src="images/Logo 2.png" alt="#logo">
-          <img src="images/Logo 3.png" alt="#logo">
-          <img src="images/Logo 4.png" alt="#logo">
-          <img src="images/Logo 5.png" alt="#logo">
+        <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-lg-2 d-flex flex-column justify-content-center">
+              <h2>100.000+</h2>
+              <p>Finsweet Users</p>
+          </div>
+          <div class="col-lg-10 d-flex align-items-center justify-content-around">
+              <img src="images/Logo 1.png" alt="#logo">
+              <img src="images/Logo 2.png" alt="#logo">
+              <img src="images/Logo 3.png" alt="#logo">
+              <img src="images/Logo 4.png" alt="#logo">
+              <img src="images/Logo 5.png" alt="#logo">
+          </div>
         </div>
       </div>
       </div>
@@ -100,26 +102,26 @@
       <!-- benifits start  -->
       <div id="benifits">
         <div class="container">
-          <h2>The benefits of working with us</h2>
+          <h2 class="text-center">The benefits of working with us</h2>
           <div class="row justify-content-between">
-            <div class="col-lg-4">
+            <div class="col-lg-4 item">
               <img src="images/Icon (13).png" alt="#icon">
               <h3>Customize with ease</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
             </div>
-            <div class="col-lg-4">
-              <img src="images/Icon (13).png" alt="#icon">
-              <h3>Customize with ease</h3>
+            <div class="col-lg-4 item">
+              <img src="images/Icon (10).png" alt="#icon">
+              <h3>Perfectly Responsive</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
             </div>
-            <div class="col-lg-4">
-              <img src="images/Icon (13).png" alt="#icon">
-              <h3>Customize with ease</h3>
+            <div class="col-lg-4 item">
+              <img src="images/Icon (8).png" alt="#icon">
+              <h3>Friendly Support</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
             </div>
           </div>
         </div>
-      </div>      
+      </div>    
       <!-- benifits end  -->
       <!-- user, client, suppor start  -->
       <div id="support">
@@ -131,33 +133,41 @@
                 Client-first </h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
             </div>
-            <div class="col-lg-5 right ms-auto">
+            <div class="col-lg-5 right mx-auto">
               <img src="images/man-explaining-problems-to-faceless-psychologist-7176030.png" alt="">
             </div>
           </div>
-        <div id="revision container-fluid">
-          <div class="row flex-row-reverse">
-            <div class="col-lg-6 d-flex flex-column justify-content-center left">
-              <p>Free Revision Rounds</p>
-              <h2>Get free Revisions and one week of free maintenance</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            </div>
-            <div class="col-lg-5 right me-auto">
-              <img src="images/photo-of-man-holding-a-book-927022.png" alt="#man">
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6 d-flex flex-column justify-content-center left">
-            <p>24/7 Support </p>
-            <h2>Working with us, you will be getting 24/7 priority support</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-          </div>
-          <div class="col-lg-5 right ms-auto">
-            <img src="images/a-man-working-in-a-call-center-8867431.png" alt="#man">
-          </div>
-        </div>
-        <div id="delivery container-fluid">
+      </div>
+      <div id="revision">
+<div class="container">
+  <div class="row flex-row-reverse">
+    <div class="col-lg-6 d-flex flex-column justify-content-center ms-auto left">
+      <p>Free Revision Rounds</p>
+      <h2>Get free Revisions and one week of free maintenance</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    </div>
+    <div class="col-lg-5 right me-auto">
+      <img src="images/photo-of-man-holding-a-book-927022.png" alt="#man">
+    </div>
+  </div>
+</div>
+      </div>
+    <div id="supp">
+<div class="container">
+  <div class="row">
+    <div class="col-lg-6 me-auto left">
+      <p>24/7 Support </p>
+      <h2>Working with us, you will be getting 24/7 priority support</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    </div>
+    <div class="col-lg-5 right me-auto">
+      <img src="images/a-man-working-in-a-call-center-8867431.png" alt="#man">
+    </div>
+  </div>
+</div>
+    </div>
+      <div id="delivery">
+        <div class="container">
           <div class="row flex-row-reverse">
             <div class="col-lg-6 d-flex flex-column justify-content-center left">
               <p>Quick Delivery </p>
