--- a/pricing.html
+++ b/pricing.html
@@ -73,12 +73,28 @@
           </div>
           <div class="row justify-content-between">
             <div class="col-lg-4">
-              <div class="price d-flex">
+              <div class="price d-flex align-items-center">
                 <h2>$299</h2>
                 <p>Per Design</p>
               </div>
               <h3>Landing Page </h3>
-              <p>When you’re ready to go beyond prototyping in Figma, </p>
+              <p class="p">When you’re ready to go beyond prototyping in Figma, </p>
+              <ul>
+                <li>All limited links</li>
+                <li>Own analytics platform</li>
+                <li>Chat support</li>
+                <li class="disable">Optimize hashtags</li>
+                <li class="disable">Unlimited users</li>
+              </ul>
+              <button>Get Started</button>
+            </div>
+            <div class="col-lg-4">
+              <div class="price d-flex align-items-center">
+                <h2>$299</h2>
+                <p>Per Design</p>
+              </div>
+              <h3>Landing Page </h3>
+              <p class="p">When you’re ready to go beyond prototyping in Figma, </p>
               <ul>
                 <li>All limited links</li>
                 <li>Own analytics platform</li>
@@ -89,28 +105,12 @@
               <button>Get Started</button>
             </div>
             <div class="col-lg-4">
-              <div class="price d-flex">
+              <div class="price d-flex align-items-center">
                 <h2>$299</h2>
                 <p>Per Design</p>
               </div>
               <h3>Landing Page </h3>
-              <p>When you’re ready to go beyond prototyping in Figma, </p>
-              <ul>
-                <li>All limited links</li>
-                <li>Own analytics platform</li>
-                <li>Chat support</li>
-                <li>Optimize hashtags</li>
-                <li>Unlimited users</li>
-              </ul>
-              <button>Get Started</button>
-            </div>
-            <div class="col-lg-4">
-              <div class="price d-flex">
-                <h2>$299</h2>
-                <p>Per Design</p>
-              </div>
-              <h3>Landing Page </h3>
-              <p>When you’re ready to go beyond prototyping in Figma, </p>
+              <p class="p">When you’re ready to go beyond prototyping in Figma, </p>
               <ul>
                 <li>All limited links</li>
                 <li>Own analytics platform</li>
