blog page is done

--- a/blog-page.html
+++ b/blog-page.html
@@ -58,7 +58,7 @@
               </li>
             </ul>
             <div>
-              <button class="btn" type="submit">Contact us</button>
+              <button class="btn" type="submit"><a href="./contact-us.html">Contact Us</a></button>
             </div>
           </div>
         </div>
@@ -70,8 +70,8 @@
           <h1>A UX Case Study on Creating a Studious Environment for Students</h1>
           <p>Andrew Jonson <b>Posted on 27th January 2021</b></p>
           <img src="images/people-working-in-front-of-computer-3182763.png" alt="#study">
-          <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.</p>
-          <a href="#">Read more</a>
+          <p class="p">Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.</p>
+          <a href="./read-blog.html">Read more</a>
         </div>
       </div>
       <!-- case study end  -->
@@ -89,7 +89,7 @@
                 <p class="p">
                   See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
                 </p>
-                <a href="#"
+                <a href="./read-blog.html"
                   >Read More
                   <span><img src="images/Arrow 1 (1).png" alt="" /></span
                 ></a>
@@ -105,7 +105,7 @@
                 <p class="p">
                   See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
                 </p>
-                <a href="#"
+                <a href="./read-blog.html"
                   >Read More
                   <span><img src="images/Arrow 1 (1).png" alt="" /></span
                 ></a>
@@ -121,7 +121,7 @@
                 <p class="p">
                   See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
                 </p>
-                <a href="#"
+                <a href="./read-blog.html"
                   >Read More
                   <span><img src="images/Arrow 1 (1).png" alt="" /></span
                 ></a>
@@ -137,7 +137,7 @@
                 <p class="p">
                   See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
                 </p>
-                <a href="#"
+                <a href="./read-blog.html"
                   >Read More
                   <span><img src="images/Arrow 1 (1).png" alt="" /></span
                 ></a>
@@ -153,7 +153,7 @@
                 <p class="p">
                   See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
                 </p>
-                <a href="#"
+                <a href="./read-blog.html"
                   >Read More
                   <span><img src="images/Arrow 1 (1).png" alt="" /></span
                 ></a>
@@ -169,7 +169,7 @@
                 <p class="p">
                   See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract
                 </p>
-                <a href="#"
+                <a href="./read-blog.html"
                   >Read More
                   <span><img src="images/Arrow 1 (1).png" alt="" /></span
                 ></a>
