--- a/feature.html
+++ b/feature.html
@@ -51,7 +51,7 @@
                 <a class="nav-link" aria-current="page" href="pricing.html">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">FAQ</a>
+                <a class="nav-link" aria-current="page" href="./faq.html">FAQ</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="blog-page.html">Blog</a>
