--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -42,19 +42,19 @@
                 <a class="nav-link " aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">About Us</a>
+                <a class="nav-link" aria-current="page" href="./about-us.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Features</a>
+                <a class="nav-link" aria-current="page" href="./feature.html">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Pricing</a>
+                <a class="nav-link" aria-current="page" href="./pricing.html">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">FAQ</a>
+                <a class="nav-link" aria-current="page" href="./faq.html">FAQ</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Blog</a>
+                <a class="nav-link" aria-current="page" href="./blog-page.html">Blog</a>
               </li>
             </ul>
             <div>
