--- a/read-blog.html
+++ b/read-blog.html
@@ -39,26 +39,26 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">About Us</a>
+                <a class="nav-link" aria-current="page" href="./about-us.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Features</a>
+                <a class="nav-link" aria-current="page" href="./feature.html">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Pricing</a>
+                <a class="nav-link" aria-current="page" href="./pricing.html">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">FAQ</a>
+                <a class="nav-link" aria-current="page" href="./faq.html">FAQ</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Blog</a>
+                <a class="nav-link" aria-current="page" href="./blog-page.html">Blog</a>
               </li>
             </ul>
             <div>
-              <button class="btn" type="submit">Contact us</button>
+              <button class="btn" type="submit"><a href="./contact-us.html"></a>Contact us</button>
             </div>
           </div>
         </div>
