--- a/pricing.html
+++ b/pricing.html
@@ -90,11 +90,11 @@
             </div>
             <div class="col-lg-4">
               <div class="price d-flex align-items-center">
-                <h2>$299</h2>
-                <p>Per Design</p>
+                <h2>$499 +</h2>
+                <p>Per Design </p>
               </div>
-              <h3>Landing Page </h3>
-              <p class="p">When you’re ready to go beyond prototyping in Figma, </p>
+              <h3>Complex Project</h3>
+              <p class="p">When you’re ready to go beyond prototyping in Figma, Webflow’s ready to help.</p>
               <ul>
                 <li>All limited links</li>
                 <li>Own analytics platform</li>
@@ -117,6 +117,7 @@
                 <li>Chat support</li>
                 <li>Optimize hashtags</li>
                 <li>Unlimited users</li>
+                <li>Assist and Help</li>
               </ul>
               <button>Get Started</button>
             </div>
