read-case working

--- a/read-case-studies.html
+++ b/read-case-studies.html
@@ -17,6 +17,7 @@
   />
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/read-blog.css">
+  <link rel="stylesheet" href="css/read-case-studies.css">
 </head>
 <body>
       <!-- nav start -->
@@ -39,26 +40,26 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">About Us</a>
+                <a class="nav-link" aria-current="page" href="./about-us.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Features</a>
+                <a class="nav-link" aria-current="page" href="./about-us.html">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Pricing</a>
+                <a class="nav-link" aria-current="page" href="./pricing.html">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">FAQ</a>
+                <a class="nav-link" aria-current="page" href="./faq.html">FAQ</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Blog</a>
+                <a class="nav-link" aria-current="page" href="./blog-page.html">Blog</a>
               </li>
             </ul>
             <div>
-              <button class="btn" type="submit">Contact us</button>
+              <button class="btn" type="submit"><a href="./contact-us.html">Contact us</a></button>
             </div>
           </div>
         </div>
@@ -71,7 +72,7 @@
             <div class="col-lg-11 ms-auto">
               <h4>Web design and development</h4>
               <h1>Finsweet Design case studies</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+              <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
             </div>
             <div class="col-lg-10 mx-auto">
               <img src="images/Main image.png" alt="#main">
@@ -84,11 +85,11 @@
                   <p>Client</p>
                   <h5>facebook.com</h5>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-3 mx-auto">
                   <p>Service</p>
                   <h5>Product Design</h5>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                   <p>Deliverable</p>
                   <h5>UI Screens, UX Flow & Prototype</h5>
                 </div>
