--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor.
             </p>
-            <a href="#"
+            <a href="./contact-us.html"
               >Get in touch with us
               <span><img src="images/Arrow 2.png" alt="" /></span
             ></a>
@@ -150,7 +150,7 @@
           class="p-text d-lg-flex align-items-center justify-content-between"
         >
           <h2>View our projects</h2>
-          <a href="#"
+          <a href="./work.html"
             >View More <span><img src="images/Arrow 1 (1).png" alt="" /></span
           ></a>
         </div>
@@ -163,7 +163,7 @@
                 Euismod faucibus turpis eu gravida mi. Pellentesque et velit
                 aliquam
               </p>
-              <a href="#"
+              <a href="./read-case-studies.html"
                 >View project
                 <span><img src="images/Arrow 2 (1).png" alt="" /></span
               ></a>
@@ -174,7 +174,7 @@
               <img src="images/Rectangle 1313.png" alt="" />
               <div class="pop2">
                 <h3>Unisaas Website Design</h3>
-                <a href="#"
+                <a href="./read-case-studies.html"
                   >View project
                   <span><img src="images/Arrow 2 (1).png" alt="" /></span
                 ></a>
@@ -184,7 +184,7 @@
               <img src="images/Card (1).png" alt="" />
               <div class="pop2">
                 <h3>Unisaas Website Design</h3>
-                <a href="#"
+                <a href="./read-case-studies.html"
                   >View project
                   <span><img src="images/Arrow 2 (1).png" alt="" /></span
                 ></a>
@@ -355,7 +355,7 @@
         <div class="row">
           <div class="col-lg-4 left">
             <h2>Frequently asked questions</h2>
-            <a href="#">Contact us for more info</a>
+            <a href="./contact-us.html">Contact us for more info</a>
           </div>
           <div class="col-lg-8 right">
             <div class="accordion" id="accordionExample">
@@ -512,7 +512,7 @@
             <input type="email" placeholder="Email" />
             <input type="text" placeholder="Paste your Figma design URL" />
             <button>Send an Inquiry</button>
-            <a href="#"
+            <a href="./contact-us.html"
               >Get in touch with us
               <span><img src="images/Arrow 1.png" alt="" /></span
             ></a>
@@ -636,12 +636,11 @@
             </div>
             <div class="col-lg-6 d-flex align-items-center justify-content-end">
               <ul class="d-flex align-items-center">
-                <li>Home</li>
-                <li>About us</li>
-                <li>Features</li>
-                <li>Pricing</li>
-                <li>FAQ</li>
-                <li>Blog</li>
+                <li><a href="./index.html">Home</a></li>
+<li><a href="./about-us.html">About Us</a> </li>               <li><a href="./feature.html">Features</a></li>
+                <li><a href="./pricing.html">Pricing</a></li>
+                <li><a href="./faq.html">FAQ</a></li>
+                <li><a href="./blog-page.html">Blog</a></li>
               </ul>
             </div>
           </div>
