--- a/pricing.html
+++ b/pricing.html
@@ -58,7 +58,7 @@
               </li>
             </ul>
             <div>
-              <button class="btn" type="submit">Contact us</button>
+              <button class="btn" type="submit"><a href="./contact-us.html">Contact Us</a></button>
             </div>
           </div>
         </div>
