--- a/contact-us.html
+++ b/contact-us.html
@@ -1,103 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us</title>
-  <link rel="icon" href="images/favicon-32x32.png" type="image/x-icon">
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-  />
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/contact-us.css">
-</head>
-<body>
-      <!-- nav start -->
-      <nav class="navbar navbar-expand-lg">
-        <div class="container">
-          <a class="navbar-brand" href="#"
-            ><img src="images/Logo .png" alt=""
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <i class="bi bi-list"></i>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="about-us.html">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="feature.html">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="pricing.html">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">FAQ</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="blog-page.html">Blog</a>
-              </li>
-            </ul>
-            <div>
-              <button class="btn" type="submit">Contact us</button>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Us</title>
+    <link rel="icon" href="images/favicon-32x32.png" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/contact-us.css" />
+  </head>
+  <body>
+    <!-- nav start -->
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <a class="navbar-brand" href="#"
+          ><img src="images/Logo .png" alt=""
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <i class="bi bi-list"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="about-us.html"
+                >About Us</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="feature.html"
+                >Features</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="pricing.html"
+                >Pricing</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">FAQ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="blog-page.html"
+                >Blog</a
+              >
+            </li>
+          </ul>
+          <div>
+            <button class="btn" type="submit">Contact us</button>
           </div>
         </div>
-      </nav>
-      <!-- nav end  -->
-      <div id="form">
-        <div class="container">
-          <h1 class="text-center">Contact Us</h1>
-          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-          <div class="row justify-content-center">
-            <div class="col-10">
-              <div class="row justify-content-center">
-                <div class="col-lg-5 d-flex flex-column">
-                  <label for="name">Name</label>
-                  <input type="name" placeholder="Enter Your Name">
-                </div>
-                <div class="col-lg-5 d-flex flex-column">
-                  <label for="name">Name</label>
-                  <input type="name" placeholder="Enter Your Email">
-                </div>
-                <div class="col-lg-5 d-flex flex-column">
-                  <label for="name">Name</label>
-                  <input type="name" placeholder="Provide Contact">
-                </div>
-                <div class="col-lg-5 d-flex flex-column">
-                  <label for="name">Name</label>
-                  <input type="name" placeholder="Select Subject">
-                </div>
-                <div class="col-lg-10 d-flex flex-column">
-                  <label for="message">Message</label>
-                  <input type="text" placeholder="Write your question here">
-                  <button>Send Message</button>
-                </div>
+      </div>
+    </nav>
+    <!-- nav end  -->
+    <div id="form">
+      <div class="container">
+        <h1 class="text-center">Contact Us</h1>
+        <p class="text-center p">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore.
+        </p>
+        <div class="row justify-content-center">
+          <div class="col-10 form">
+            <div class="row justify-content-center">
+              <div class="col-lg-5 d-flex flex-column">
+                <label for="name">Name</label>
+                <input type="name" placeholder="Enter Your Name" />
+              </div>
+              <div class="col-lg-5 d-flex flex-column">
+                <label for="name">Name</label>
+                <input type="name" placeholder="Enter Your Email" />
+              </div>
+              <div class="col-lg-5 d-flex flex-column">
+                <label for="name">Name</label>
+                <input type="name" placeholder="Provide Contact" />
+              </div>
+              <div class="col-lg-5 d-flex flex-column">
+                <label for="name">Name</label>
+                <input type="name" placeholder="Select Subject" />
+              </div>
+              <div class="col-lg-10 d-flex flex-column">
+                <label for="message">Message</label>
+                <input
+                  class="message"
+                  type="text"
+                  placeholder="Write your question here"
+                />
+                <button>Send Message</button>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- footer start  -->
+    </div>
+    <!-- footer start  -->
     <div id="footer">
       <div class="container">
         <div class="row">
@@ -158,5 +173,5 @@
     <!-- footer end  -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
