--- a/feature.html
+++ b/feature.html
@@ -58,7 +58,7 @@
               </li>
             </ul>
             <div>
-              <button class="btn" type="submit">Contact us</button>
+              <button class="btn" type="submit"><a href="./contact-us.html">Contact us</a></button>
             </div>
           </div>
         </div>
