--- a/about-us.html
+++ b/about-us.html
@@ -115,17 +115,17 @@
             </div>
             <div class="col-lg-3 item">
               <div class="shape"><span></span><img src="images/Line Indicator.png" alt="#line"></div>
-              <h3>Planning</h3>
+              <h3>Conception</h3>
               <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
             </div>
             <div class="col-lg-3 item">
               <div class="shape"><span></span><img src="images/Line Indicator.png" alt="#line"></div>
-              <h3>Planning</h3>
+              <h3>Design</h3>
               <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
             </div>
             <div class="col-lg-3 item">
               <div class="shape"><span></span><img src="images/Line Indicator.png" alt="#line"></div>
-              <h3>Planning</h3>
+              <h3>Development</h3>
               <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
             </div>
           </div>
@@ -259,63 +259,62 @@
       </div>
       <!-- team end  -->
       <!-- footer start  -->
-    <div id="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-5">
-            <img src="images/Logo .png" alt="#logo" />
-            <p>
-              We are always open to discuss your project and improve your online
-              presence.
-            </p>
-            <div class="contact">
-              <div class="d-flex align-items-center">
-                <div class="mail">
-                  <h3>Email me at</h3>
-                  <p>contact@website.com</p>
-                </div>
-                <div class="call">
-                  <h3>Call us</h3>
-                  <p>0927 6277 28525</p>
+      <div id="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-5">
+              <img src="images/Logo .png" alt="#logo" />
+              <p>
+                We are always open to discuss your project and improve your online
+                presence.
+              </p>
+              <div class="contact">
+                <div class="d-flex align-items-center">
+                  <div class="mail">
+                    <h3>Email me at</h3>
+                    <p>contact@website.com</p>
+                  </div>
+                  <div class="call">
+                    <h3>Call us</h3>
+                    <p>0927 6277 28525</p>
+                  </div>
                 </div>
               </div>
             </div>
+            <div class="col-lg-6 right ms-auto">
+              <h2>Lets Talk!</h2>
+              <p>
+                We are always open to discuss your project, improve your online
+                presence and help with your UX/UI design challenges.
+              </p>
+              <div class="icon">
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-twitter"></i>
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-linkedin"></i>
+              </div>
+            </div>
           </div>
-          <div class="col-lg-6 right ms-auto">
-            <h2>Lets Talk!</h2>
-            <p>
-              We are always open to discuss your project, improve your online
-              presence and help with your UX/UI design challenges.
-            </p>
-            <div class="icon">
-              <i class="bi bi-facebook"></i>
-              <i class="bi bi-twitter"></i>
-              <i class="bi bi-instagram"></i>
-              <i class="bi bi-linkedin"></i>
+        </div>
+        <div class="footer-bottom">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-6 d-flex align-items-center">
+                <p><a href="./privacy-policy.html">Copyright 2022, Finsweet.com</a></p>
+              </div>
+              <div class="col-lg-6 d-flex align-items-center justify-content-end">
+                <ul class="d-flex align-items-center">
+                  <li><a href="./index.html">Home</a></li>
+  <li><a href="./about-us.html">About Us</a> </li>               <li><a href="./feature.html">Features</a></li>
+                  <li><a href="./pricing.html">Pricing</a></li>
+                  <li><a href="./faq.html">FAQ</a></li>
+                  <li><a href="./blog-page.html">Blog</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="footer-bottom">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6 d-flex align-items-center">
-              <p>Copyright 2022, Finsweet.com</p>
-            </div>
-            <div class="col-lg-6 d-flex align-items-center justify-content-end">
-              <ul class="d-flex align-items-center">
-                <li>Home</li>
-                <li>About us</li>
-                <li>Features</li>
-                <li>Pricing</li>
-                <li>FAQ</li>
-                <li>Blog</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <!-- footer end  -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
