--- a/contact-us.html
+++ b/contact-us.html
@@ -154,16 +154,15 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 d-flex align-items-center">
-              <p>Copyright 2022, Finsweet.com</p>
+              <p><a href="./privacy-policy.html">Copyright 2022, Finsweet.com</a></p>
             </div>
             <div class="col-lg-6 d-flex align-items-center justify-content-end">
               <ul class="d-flex align-items-center">
-                <li>Home</li>
-                <li>About us</li>
-                <li>Features</li>
-                <li>Pricing</li>
-                <li>FAQ</li>
-                <li>Blog</li>
+                <li><a href="./index.html">Home</a></li>
+<li><a href="./about-us.html">About Us</a> </li>               <li><a href="./feature.html">Features</a></li>
+                <li><a href="./pricing.html">Pricing</a></li>
+                <li><a href="./faq.html">FAQ</a></li>
+                <li><a href="./blog-page.html">Blog</a></li>
               </ul>
             </div>
           </div>
