--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 d-flex align-items-center">
-              <p>Copyright 2022, Finsweet.com</p>
+              <p><a href="./privacy-policy.html">Copyright 2022, Finsweet.com</a></p>
             </div>
             <div class="col-lg-6 d-flex align-items-center justify-content-end">
               <ul class="d-flex align-items-center">
